--- a/docs/config.toml
+++ b/docs/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 contentdir = "content"
 publishdir = "docs"
 builddrafts = false
-baseUrl = ""
+baseUrl = "https://satoshi-ninja.github.io/spmt/"
 canonifyurls = true
 author = "satoshi.ninja"
 theme = "hugo-icon"
