changhe to config file

--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ publishDir = "docs"
 # Navigation section
 [params.nav]
   mission = "About"
-  # services = "Download"
+  services = "Download"
   # team = "The Team"
   # contact = "Get In Touch"
   # Include logo instead if HOME:
@@ -59,16 +59,16 @@ publishDir = "docs"
     weight = 3
     name = "strategy"
     title = "The Solution"
-    subtitle = "The Secure Pivix Masternode Tool give Pivx masternode owners the ability to start masternodes without ever exposing your private keys."
+    subtitle = "The Secure Pivix Masternode Tool gives Pivx masternode owners the ability to start masternodes without ever exposing your private keys."
     description = "<p>The recent implementation of Pivx derivations into the Ledger Nano S hardware wallet makes it now possible to offer the Pivx community a tool similar to the <a href='https://github.com/Bertrand256/dash-masternode-tool'>DASH Masternode Tool</a> a tool which allows Dash owners to sign the 'start masternode' message with the private key of a collateral kept on a secure element of an hardware wallet. Hardware wallets contain private keys which are never exposed online.<br/>The Secure Pivix Masternode Tool gives the owners of Pivx masternode the ability to send a 'start masternode' command via an easy to use a graphical interface using a collateral that is controlled by an hardware wallet such as Ledger Nano S, an hardware wallet with secure element containing private keys which are never exposed online.</p>"
 
 # Services section
 [params.services]
-  enable = false
+  enable = true
   video = true
-  vidlink = "https://vimeo.com/channels/staffpicks/93951774"
+  vidlink = "https://youtu.be/KAmAX6ZVziI"
   title = "Live Demo"
-  description = "The Secure Pivix Masternode Tool is very easy to use.<p><a href='#' class='btn btn-primary btn-outline fh5co-content-nav' data-nav-section='contact'>Downlaod</a></p>"
+  description = "The Secure Pivix Masternode Tool is very easy to use.</p>"
 
   [[params.services.item]]
     icon = "icon-present"
