--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ publishDir = "docs"
 [params.services]
   enable = true
   video = true
-  vidlink = "https://youtu.be/KAmAX6ZVziI"
+  vidlink = "https://www.youtube.com/embed/KAmAX6ZVziI"
   title = "Live Demo"
   description = "The Secure Pivix Masternode Tool is very easy to use.</p>"
 
